crates/shipper-cli/tests/snapshots/e2e_expanded__plan_single_package_filter.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_output(&stdout)
---
plan_id: <PLAN_ID>
registry: crates-io (https://crates.io)
workspace_root: <WORKSPACE_ROOT>

Total packages to publish: 1
Plan summary:
  Publishable packages: 1
  Skipped packages: 0
  Internal dependency edges: 0
  Publish levels: 1
  Plan artifact: .shipper/plan.txt (`shipper plan --format json` capture)

  1. core-lib@0.2.0 (no workspace dependencies)

Result: plan created; no packages were published
Next: run preflight with the same manifest, package, configuration, and registry selection
