crates/shipper-cli/tests/snapshots/e2e_expanded__preflight_allow_dirty.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_output(&normalize_stderr(&combined))
---
--- stdout ---
Preflight Report
===============

plan_id: <PLAN_ID>
Timestamp: <TIMESTAMP>

Token Detected: ✗

Finishability: NOT PROVEN

Packages:
┌─────────────────────┬─────────┬──────────┬──────────┬───────────────┬─────────────┬─────────────┐
│ Package             │ Version │ Published│ New Crate │ Auth Type     │ Ownership   │ Dry-run     │
├─────────────────────┼─────────┼──────────┼──────────┼───────────────┼─────────────┼─────────────┤
│ demo                │ 0.1.0   │ No       │ Yes      │ -             │ ✗           │ ✓           │
└─────────────────────┴─────────┴──────────┴──────────┴───────────────┴─────────────┴─────────────┘

Summary:
  Total packages: 1
  Already published: 0
  New crates: 1
  Ownership verified: 0
  Dry-run passed: 1
  Estimated registry pacing: at least 0s
    profile=crates-io first_publish=1 updates=0

Proof explanation:
  Proven now:
    - local package dry-run passed for 1 of 1 package.
    - registry version/new-crate checks completed for 1 package.
    - registry pacing estimate generated from the crates-io profile.
  Proof gaps:
    - ownership was not verified for 1 of 1 package: demo@0.1.0.
    - no registry token or Trusted Publishing context was detected.
  Failed checks:
    - none.
  Live-release evidence:
    - registry acceptance and post-publish visibility are recorded during publish/resume.

Result: preflight completed with advisory proof gaps; no packages were published
Next: ownership cannot be verified before a first publish; review the advisory gaps, then deliberately publish or rehearse with the same selection
--- stderr ---
[info] initializing registry client...
[info] running workspace dry-run verification...
[info] checking packages against registry...
