crates/shipper-cli/tests/snapshots/e2e_expanded__preflight_non_git_directory.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_output(&normalize_stderr(&stderr))
---
[info] checking git cleanliness...
Error: preflight failed — next steps:
  * run `shipper doctor` to diagnose auth / git / registry
  * inspect .shipper/events.jsonl for the authoritative event log
  * `shipper preflight --format json` for machine-readable detail
  Common blockers to check:
  * missing token/auth: run `shipper doctor` for guidance scoped to the selected registry before changing credentials
  * dirty git: commit or stash changes, or pass `--allow-dirty` only for intentional rehearsal
  * version already exists: run `shipper status`, then bump or skip the crate version
  * ownership failure: confirm the token can publish with `cargo owner --list <crate>`
  * registry unreachable: verify `--registry`, `--api-base`, and network access

Caused by:
    git status failed: git status failed: fatal: not a git repository (or any of the parent directories): .git
