crates/shipper-cli/tests/snapshots/e2e_expanded__status_single_crate_published.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_output(&stdout)
---
plan_id: <PLAN_ID>

demo@0.1.0: published

Result: all published
Publication performed: no
Next: all selected package versions are visible in every queried registry
